--- a/icon-net-web/package.json
+++ b/icon-net-web/package.json
@@ -7,15 +7,19 @@
     "buffer": "^6.0.3",
     "cra-template": "1.2.0",
     "crypto-browserify": "^3.12.1",
+    "fast-xml-parser": "^4.5.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "stream-browserify": "^3.0.0",
+    "timers-browserify": "^2.0.12",
     "util": "^0.12.5",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "webpack": "^5.97.1",
+    "xml2js": "^0.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
