--- a/icon-net-web/src/config.json
+++ b/icon-net-web/src/config.json
@@ -1,4 +1,5 @@
 {
-    "rest_api_server_base_url": "http://192.168.1.65:5000"
+    "rest_api_server_base_url": "http://192.168.1.65:5000",
+    "baseUrl": "http://localhost:3003"
 }
   
